# igrf_tool

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
exe/: igrf_tool
gui/: CMakeLists.txt
gui/src/: csv_panel.cpp  csv_panel.hpp  gui.cpp  main_frame.cpp  main_frame.hpp  panels.cpp  panels.hpp  point_panel.cpp  point_panel.hpp
gui/wxformbuilder/: igrf_tool.fbp
libs/igrf/: CMakeLists.txt
libs/igrf/include/igrf/: coeffs.hpp  igrf.hpp  types.hpp  utils.hpp
libs/igrf/src/: coeffs.hpp  igrf.cpp  igrf2.cpp  utils.cpp  utils.hpp
python/: coef_parse.ipynb  coeff_parser.py  igrf14coeffs.txt
tests/: CMakeLists.txt  main.cpp  test_igrf.cpp
